// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generatePageComponent — base (no storage) > generates a client component with correct api path 1`] = `
"'use client'

// Generated by ai-wingman — edit freely, you own this file.
// TODO: Add layout and styling around this component

import { useCallback, useEffect, useRef, useState } from 'react'
import { useChat } from '@ai-sdk/react'
import { DefaultChatTransport, isToolUIPart } from 'ai'
import type { UIMessage } from 'ai'
import { CopyIcon, RotateCcwIcon } from 'lucide-react'
import {
  Conversation,
  ConversationContent,
  ConversationDownload,
  ConversationEmptyState,
  ConversationScrollButton,
} from '@/components/ai-elements/conversation'
import {
  Message,
  MessageAction,
  MessageActions,
  MessageBranch,
  MessageBranchContent,
  MessageBranchNext,
  MessageBranchPage,
  MessageBranchPrevious,
  MessageBranchSelector,
  MessageContent,
  MessageResponse,
  MessageToolbar,
} from '@/components/ai-elements/message'
import {
  PromptInput,
  PromptInputBody,
  PromptInputFooter,
  PromptInputSubmit,
  PromptInputTextarea,
  PromptInputTools,
  type PromptInputMessage,
} from '@/components/ai-elements/prompt-input'
import { Reasoning, ReasoningContent, ReasoningTrigger } from '@/components/ai-elements/reasoning'
import { Source, Sources, SourcesContent, SourcesTrigger } from '@/components/ai-elements/sources'
import { Suggestion, Suggestions } from '@/components/ai-elements/suggestion'

const SUGGESTIONS = [
  'Explain a concept to me',
  'Help me write something',
  'Analyze this problem',
  'Give me some ideas',
]

function ChatInner() {
  // savedBranches maps bucket ID → array of completed assistant response texts.
  const [savedBranches, setSavedBranches] = useState<Record<string, string[]>>({})
  const [selectedBranch, setSelectedBranch] = useState<Record<string, number>>({})

  const { messages, sendMessage, status, regenerate } = useChat({
    transport: new DefaultChatTransport({ api: '/api/chat' }),
  })

  // Capture each completed assistant response as a branch.
  const prevStatus = useRef(status)
  useEffect(() => {
    if (prevStatus.current === 'streaming' && status === 'ready') {
      const lastUser = [...messages].reverse().find((m) => m.role === 'user')
      const lastAssistant = [...messages].reverse().find((m) => m.role === 'assistant')
      if (lastUser && lastAssistant) {
        const text = lastAssistant.parts
          .filter((p) => p.type === 'text')
          .map((p) => (p as { text: string }).text)
          .join('')
        setSavedBranches((prev) => {
          const existing = prev[lastUser.id] ?? []
          if (existing[existing.length - 1] === text) return prev
          return { ...prev, [lastUser.id]: [...existing, text] }
        })
      }
    }
    prevStatus.current = status
  }, [status, messages])

  const copyMessage = useCallback((text: string) => {
    void navigator.clipboard.writeText(text)
  }, [])

  const handleSubmit = useCallback((msg: PromptInputMessage) => {
    if (msg.text?.trim()) sendMessage({ text: msg.text })
  }, [sendMessage])

  const handleSuggestion = useCallback((suggestion: string) => {
    sendMessage({ text: suggestion })
  }, [sendMessage])

  // Returns branch texts for a bucket: saved history + current response (deduplicated).
  function getBranchTexts(bucketId: string): string[] {
    const saved = savedBranches[bucketId] ?? []
    const current = messages
      .find((m) => m.role === 'assistant' && (savedBranches[bucketId] !== undefined || m.id === bucketId || true))
    // Walk forward from last user message to find the live assistant message
    const bucketIdx = messages.findIndex((m) => m.id === bucketId)
    const liveAssistant = bucketIdx >= 0
      ? messages.slice(bucketIdx + 1).find((m) => m.role === 'assistant')
      : messages.slice().reverse().find((m) => m.role === 'assistant')
    void current
    if (!liveAssistant) return saved
    const currentText = liveAssistant.parts
      .filter((p) => p.type === 'text')
      .map((p) => (p as { text: string }).text)
      .join('')
    if (saved.includes(currentText)) return saved
    return [...saved, currentText]
  }

  return (
    <>
      <Conversation>
        <ConversationContent>
          {messages.length === 0 && (
            <>
              <ConversationEmptyState
                title="Start a conversation"
                description="Send a message or pick a suggestion to begin."
              />
              <Suggestions>
                {SUGGESTIONS.map((s) => (
                  <Suggestion key={s} suggestion={s} onClick={handleSuggestion} />
                ))}
              </Suggestions>
            </>
          )}
          {(() => {
            let currentUserMsgId: string | null = null

            return messages.map((msg) => {
              if (msg.role === 'user') {
                currentUserMsgId = msg.id
                const userText = msg.parts
                  .filter((p) => p.type === 'text')
                  .map((p) => (p as { text: string }).text)
                  .join('')
                return (
                  <Message key={msg.id} from="user">
                    <MessageContent>{userText}</MessageContent>
                  </Message>
                )
              }

              if (msg.role === 'assistant') {
                const bucketId = currentUserMsgId ?? msg.id
                const branches = getBranchTexts(bucketId)
                const currentIdx = selectedBranch[bucketId] ?? branches.length - 1
                const isLast = msg === messages[messages.length - 1]

                const reasoningText = msg.parts
                  .filter((p) => p.type === 'reasoning')
                  .map((p) => (p as { text: string }).text)
                  .join('\\n\\n')

                const isReasoningStreaming =
                  isLast && status === 'streaming' && msg.parts.at(-1)?.type === 'reasoning'

                const sourceParts = msg.parts.filter((p) => p.type === 'source-url')

                const toolParts = msg.parts.filter(isToolUIPart)

                if (branches.length === 0 && !reasoningText && sourceParts.length === 0 && toolParts.length === 0) return null

                return (
                  <Message key={msg.id} from="assistant">
                    {reasoningText && (
                      <Reasoning isStreaming={isReasoningStreaming}>
                        <ReasoningTrigger />
                        <ReasoningContent>{reasoningText}</ReasoningContent>
                      </Reasoning>
                    )}
                    {sourceParts.length > 0 && (
                      <Sources>
                        <SourcesTrigger count={sourceParts.length} />
                        <SourcesContent>
                          {sourceParts.map((p, i) => (
                            <Source key={i} href={(p as any).url} title={(p as any).url} />
                          ))}
                        </SourcesContent>
                      </Sources>
                    )}
                    {toolParts.map((p) => (
                      <MessageContent key={p.toolCallId}>
                        <span className="font-mono text-xs text-muted-foreground">
                          {String(p.type).replace('tool-', '')}
                          {p.state === 'input-available' || p.state === 'approval-requested'
                            ? \`(\${JSON.stringify(p.input)})\` : ''}
                          {p.state === 'output-available' ? \` → \${JSON.stringify(p.output)}\` : ''}
                          {p.state === 'approval-requested' ? ' ⏳ awaiting approval' : ''}
                          {p.state === 'approval-responded' && p.approval.approved ? ' ✓ approved' : ''}
                          {p.state === 'approval-responded' && !p.approval.approved ? ' ✗ rejected' : ''}
                        </span>
                      </MessageContent>
                    ))}

                    {branches.length > 0 && (
                      <MessageBranch
                        defaultBranch={branches.length - 1}
                        onBranchChange={(idx) =>
                          setSelectedBranch((prev) => ({ ...prev, [bucketId]: idx }))
                        }
                      >
                        <MessageBranchContent>
                          {branches.map((text, bi) => (
                            <MessageContent key={bi}>
                              <MessageResponse>{text}</MessageResponse>
                            </MessageContent>
                          ))}
                        </MessageBranchContent>
                        <MessageToolbar>
                          <MessageActions>
                            <MessageAction
                              tooltip="Copy"
                              onClick={() => copyMessage(branches[currentIdx] ?? '')}
                            >
                              <CopyIcon />
                            </MessageAction>
                            <MessageAction
                              tooltip="Regenerate"
                              onClick={() => regenerate()}
                              disabled={status !== 'ready'}
                            >
                              <RotateCcwIcon />
                            </MessageAction>
                          </MessageActions>
                          <MessageBranchSelector>
                            <MessageBranchPrevious />
                            <MessageBranchPage />
                            <MessageBranchNext />
                          </MessageBranchSelector>
                        </MessageToolbar>
                      </MessageBranch>
                    )}
                  </Message>
                )
              }

              return null
            })
          })()}
        </ConversationContent>
        <ConversationScrollButton />
        <ConversationDownload messages={messages} />
      </Conversation>

      <PromptInput onSubmit={handleSubmit} className="border-t">
        <PromptInputBody>
          <PromptInputTextarea placeholder="Type a message..." />
        </PromptInputBody>
        <PromptInputFooter>
          <PromptInputTools>
            {/* TODO: Add tools */}
          </PromptInputTools>
          <PromptInputSubmit status={status} disabled={status !== 'ready'} />
        </PromptInputFooter>
      </PromptInput>
    </>
  )
}

export default function ChatPage() {
  return (
    <div className="flex flex-col h-screen">
      <ChatInner />
    </div>
  )
}
"
`;

exports[`generatePageComponent — with interrupt > snapshot with interrupt enabled 1`] = `
"'use client'

// Generated by ai-wingman — edit freely, you own this file.
// TODO: Add layout and styling around this component

import { useCallback, useEffect, useRef, useState } from 'react'
import { useChat } from '@ai-sdk/react'
import { DefaultChatTransport, isToolUIPart } from 'ai'
import type { UIMessage } from 'ai'
import { CopyIcon, RotateCcwIcon } from 'lucide-react'
import {
  Conversation,
  ConversationContent,
  ConversationDownload,
  ConversationEmptyState,
  ConversationScrollButton,
} from '@/components/ai-elements/conversation'
import {
  Message,
  MessageAction,
  MessageActions,
  MessageBranch,
  MessageBranchContent,
  MessageBranchNext,
  MessageBranchPage,
  MessageBranchPrevious,
  MessageBranchSelector,
  MessageContent,
  MessageResponse,
  MessageToolbar,
} from '@/components/ai-elements/message'
import {
  PromptInput,
  PromptInputBody,
  PromptInputFooter,
  PromptInputSubmit,
  PromptInputTextarea,
  PromptInputTools,
  type PromptInputMessage,
} from '@/components/ai-elements/prompt-input'
import { Reasoning, ReasoningContent, ReasoningTrigger } from '@/components/ai-elements/reasoning'
import { Source, Sources, SourcesContent, SourcesTrigger } from '@/components/ai-elements/sources'
import { Suggestion, Suggestions } from '@/components/ai-elements/suggestion'
import { ApprovalWidget } from '@/components/approval-widget'

const SUGGESTIONS = [
  'Explain a concept to me',
  'Help me write something',
  'Analyze this problem',
  'Give me some ideas',
]

function ChatInner() {
  // savedBranches maps bucket ID → array of completed assistant response texts.
  const [savedBranches, setSavedBranches] = useState<Record<string, string[]>>({})
  const [selectedBranch, setSelectedBranch] = useState<Record<string, number>>({})

  const { messages, sendMessage, status, regenerate, addToolApprovalResponse } = useChat({
    transport: new DefaultChatTransport({ api: '/api/chat' }),
  })

  // Capture each completed assistant response as a branch.
  const prevStatus = useRef(status)
  useEffect(() => {
    if (prevStatus.current === 'streaming' && status === 'ready') {
      const lastUser = [...messages].reverse().find((m) => m.role === 'user')
      const lastAssistant = [...messages].reverse().find((m) => m.role === 'assistant')
      if (lastUser && lastAssistant) {
        const text = lastAssistant.parts
          .filter((p) => p.type === 'text')
          .map((p) => (p as { text: string }).text)
          .join('')
        setSavedBranches((prev) => {
          const existing = prev[lastUser.id] ?? []
          if (existing[existing.length - 1] === text) return prev
          return { ...prev, [lastUser.id]: [...existing, text] }
        })
      }
    }
    prevStatus.current = status
  }, [status, messages])

  const copyMessage = useCallback((text: string) => {
    void navigator.clipboard.writeText(text)
  }, [])

  const handleSubmit = useCallback((msg: PromptInputMessage) => {
    if (msg.text?.trim()) sendMessage({ text: msg.text })
  }, [sendMessage])

  const handleSuggestion = useCallback((suggestion: string) => {
    sendMessage({ text: suggestion })
  }, [sendMessage])

  // Returns branch texts for a bucket: saved history + current response (deduplicated).
  function getBranchTexts(bucketId: string): string[] {
    const saved = savedBranches[bucketId] ?? []
    const current = messages
      .find((m) => m.role === 'assistant' && (savedBranches[bucketId] !== undefined || m.id === bucketId || true))
    // Walk forward from last user message to find the live assistant message
    const bucketIdx = messages.findIndex((m) => m.id === bucketId)
    const liveAssistant = bucketIdx >= 0
      ? messages.slice(bucketIdx + 1).find((m) => m.role === 'assistant')
      : messages.slice().reverse().find((m) => m.role === 'assistant')
    void current
    if (!liveAssistant) return saved
    const currentText = liveAssistant.parts
      .filter((p) => p.type === 'text')
      .map((p) => (p as { text: string }).text)
      .join('')
    if (saved.includes(currentText)) return saved
    return [...saved, currentText]
  }

  return (
    <>
      <Conversation>
        <ConversationContent>
          {messages.length === 0 && (
            <>
              <ConversationEmptyState
                title="Start a conversation"
                description="Send a message or pick a suggestion to begin."
              />
              <Suggestions>
                {SUGGESTIONS.map((s) => (
                  <Suggestion key={s} suggestion={s} onClick={handleSuggestion} />
                ))}
              </Suggestions>
            </>
          )}
          {(() => {
            let currentUserMsgId: string | null = null

            return messages.map((msg) => {
              if (msg.role === 'user') {
                currentUserMsgId = msg.id
                const userText = msg.parts
                  .filter((p) => p.type === 'text')
                  .map((p) => (p as { text: string }).text)
                  .join('')
                return (
                  <Message key={msg.id} from="user">
                    <MessageContent>{userText}</MessageContent>
                  </Message>
                )
              }

              if (msg.role === 'assistant') {
                const bucketId = currentUserMsgId ?? msg.id
                const branches = getBranchTexts(bucketId)
                const currentIdx = selectedBranch[bucketId] ?? branches.length - 1
                const isLast = msg === messages[messages.length - 1]

                const reasoningText = msg.parts
                  .filter((p) => p.type === 'reasoning')
                  .map((p) => (p as { text: string }).text)
                  .join('\\n\\n')

                const isReasoningStreaming =
                  isLast && status === 'streaming' && msg.parts.at(-1)?.type === 'reasoning'

                const sourceParts = msg.parts.filter((p) => p.type === 'source-url')

                const toolParts = msg.parts.filter(isToolUIPart)

                if (branches.length === 0 && !reasoningText && sourceParts.length === 0 && toolParts.length === 0) return null

                return (
                  <Message key={msg.id} from="assistant">
                    {reasoningText && (
                      <Reasoning isStreaming={isReasoningStreaming}>
                        <ReasoningTrigger />
                        <ReasoningContent>{reasoningText}</ReasoningContent>
                      </Reasoning>
                    )}
                    {sourceParts.length > 0 && (
                      <Sources>
                        <SourcesTrigger count={sourceParts.length} />
                        <SourcesContent>
                          {sourceParts.map((p, i) => (
                            <Source key={i} href={(p as any).url} title={(p as any).url} />
                          ))}
                        </SourcesContent>
                      </Sources>
                    )}
                    {toolParts.map((p) => (
                      <MessageContent key={p.toolCallId}>
                        <span className="font-mono text-xs text-muted-foreground">
                          {String(p.type).replace('tool-', '')}
                          {p.state === 'input-available' || p.state === 'approval-requested'
                            ? \`(\${JSON.stringify(p.input)})\` : ''}
                          {p.state === 'output-available' ? \` → \${JSON.stringify(p.output)}\` : ''}
                          {p.state === 'approval-requested' ? ' ⏳ awaiting approval' : ''}
                          {p.state === 'approval-responded' && p.approval.approved ? ' ✓ approved' : ''}
                          {p.state === 'approval-responded' && !p.approval.approved ? ' ✗ rejected' : ''}
                        </span>
                      </MessageContent>
                    ))}

                    {branches.length > 0 && (
                      <MessageBranch
                        defaultBranch={branches.length - 1}
                        onBranchChange={(idx) =>
                          setSelectedBranch((prev) => ({ ...prev, [bucketId]: idx }))
                        }
                      >
                        <MessageBranchContent>
                          {branches.map((text, bi) => (
                            <MessageContent key={bi}>
                              <MessageResponse>{text}</MessageResponse>
                            </MessageContent>
                          ))}
                        </MessageBranchContent>
                        <MessageToolbar>
                          <MessageActions>
                            <MessageAction
                              tooltip="Copy"
                              onClick={() => copyMessage(branches[currentIdx] ?? '')}
                            >
                              <CopyIcon />
                            </MessageAction>
                            <MessageAction
                              tooltip="Regenerate"
                              onClick={() => regenerate()}
                              disabled={status !== 'ready'}
                            >
                              <RotateCcwIcon />
                            </MessageAction>
                          </MessageActions>
                          <MessageBranchSelector>
                            <MessageBranchPrevious />
                            <MessageBranchPage />
                            <MessageBranchNext />
                          </MessageBranchSelector>
                        </MessageToolbar>
                      </MessageBranch>
                    )}
                  </Message>
                )
              }

              return null
            })
          })()}
        </ConversationContent>
        <ConversationScrollButton />
        <ConversationDownload messages={messages} />
      </Conversation>

      <ApprovalWidget messages={messages} addToolApprovalResponse={addToolApprovalResponse} />

      <PromptInput onSubmit={handleSubmit} className="border-t">
        <PromptInputBody>
          <PromptInputTextarea placeholder="Type a message..." />
        </PromptInputBody>
        <PromptInputFooter>
          <PromptInputTools>
            {/* TODO: Add tools */}
          </PromptInputTools>
          <PromptInputSubmit status={status} disabled={status !== 'ready'} />
        </PromptInputFooter>
      </PromptInput>
    </>
  )
}

export default function ChatPage() {
  return (
    <div className="flex flex-col h-screen">
      <ChatInner />
    </div>
  )
}
"
`;

exports[`generatePageComponent — with storage > snapshot matches 1`] = `
"'use client'

// Generated by ai-wingman — edit freely, you own this file.
// TODO: Add layout and styling around this component

import { useCallback, useEffect, useRef, useState } from 'react'
import { useChat } from '@ai-sdk/react'
import { DefaultChatTransport, isToolUIPart } from 'ai'
import type { UIMessage } from 'ai'
import { CopyIcon, RotateCcwIcon } from 'lucide-react'
import {
  Conversation,
  ConversationContent,
  ConversationDownload,
  ConversationEmptyState,
  ConversationScrollButton,
} from '@/components/ai-elements/conversation'
import {
  Message,
  MessageAction,
  MessageActions,
  MessageBranch,
  MessageBranchContent,
  MessageBranchNext,
  MessageBranchPage,
  MessageBranchPrevious,
  MessageBranchSelector,
  MessageContent,
  MessageResponse,
  MessageToolbar,
} from '@/components/ai-elements/message'
import {
  PromptInput,
  PromptInputBody,
  PromptInputFooter,
  PromptInputSubmit,
  PromptInputTextarea,
  PromptInputTools,
  type PromptInputMessage,
} from '@/components/ai-elements/prompt-input'
import { Reasoning, ReasoningContent, ReasoningTrigger } from '@/components/ai-elements/reasoning'
import { Source, Sources, SourcesContent, SourcesTrigger } from '@/components/ai-elements/sources'
import { Suggestion, Suggestions } from '@/components/ai-elements/suggestion'

const SUGGESTIONS = [
  'Explain a concept to me',
  'Help me write something',
  'Analyze this problem',
  'Give me some ideas',
]

interface ChatInnerProps {
  conversationId: string
  initialMessages: UIMessage[]
}

function ChatInner({ conversationId, initialMessages }: ChatInnerProps) {
  // savedBranches maps bucket ID → array of completed assistant response texts.
  const [savedBranches, setSavedBranches] = useState<Record<string, string[]>>({})
  const [selectedBranch, setSelectedBranch] = useState<Record<string, number>>({})

  const { messages, sendMessage, status, regenerate } = useChat({
    transport: new DefaultChatTransport({
      api: '/api/chat',
      body: { conversationId },
    }),
    messages: initialMessages,
  })

  // Capture each completed assistant response as a branch.
  const prevStatus = useRef(status)
  useEffect(() => {
    if (prevStatus.current === 'streaming' && status === 'ready') {
      const lastUser = [...messages].reverse().find((m) => m.role === 'user')
      const lastAssistant = [...messages].reverse().find((m) => m.role === 'assistant')
      if (lastUser && lastAssistant) {
        const text = lastAssistant.parts
          .filter((p) => p.type === 'text')
          .map((p) => (p as { text: string }).text)
          .join('')
        setSavedBranches((prev) => {
          const existing = prev[lastUser.id] ?? []
          if (existing[existing.length - 1] === text) return prev
          return { ...prev, [lastUser.id]: [...existing, text] }
        })
      }
    }
    prevStatus.current = status
  }, [status, messages])

  const copyMessage = useCallback((text: string) => {
    void navigator.clipboard.writeText(text)
  }, [])

  const handleSubmit = useCallback((msg: PromptInputMessage) => {
    if (msg.text?.trim()) sendMessage({ text: msg.text })
  }, [sendMessage])

  const handleSuggestion = useCallback((suggestion: string) => {
    sendMessage({ text: suggestion })
  }, [sendMessage])

  // Returns branch texts for a bucket: saved history + current response (deduplicated).
  function getBranchTexts(bucketId: string): string[] {
    const saved = savedBranches[bucketId] ?? []
    const current = messages
      .find((m) => m.role === 'assistant' && (savedBranches[bucketId] !== undefined || m.id === bucketId || true))
    // Walk forward from last user message to find the live assistant message
    const bucketIdx = messages.findIndex((m) => m.id === bucketId)
    const liveAssistant = bucketIdx >= 0
      ? messages.slice(bucketIdx + 1).find((m) => m.role === 'assistant')
      : messages.slice().reverse().find((m) => m.role === 'assistant')
    void current
    if (!liveAssistant) return saved
    const currentText = liveAssistant.parts
      .filter((p) => p.type === 'text')
      .map((p) => (p as { text: string }).text)
      .join('')
    if (saved.includes(currentText)) return saved
    return [...saved, currentText]
  }

  return (
    <>
      <Conversation>
        <ConversationContent>
          {messages.length === 0 && (
            <>
              <ConversationEmptyState
                title="Start a conversation"
                description="Send a message or pick a suggestion to begin."
              />
              <Suggestions>
                {SUGGESTIONS.map((s) => (
                  <Suggestion key={s} suggestion={s} onClick={handleSuggestion} />
                ))}
              </Suggestions>
            </>
          )}
          {(() => {
            let currentUserMsgId: string | null = null

            return messages.map((msg) => {
              if (msg.role === 'user') {
                currentUserMsgId = msg.id
                const userText = msg.parts
                  .filter((p) => p.type === 'text')
                  .map((p) => (p as { text: string }).text)
                  .join('')
                return (
                  <Message key={msg.id} from="user">
                    <MessageContent>{userText}</MessageContent>
                  </Message>
                )
              }

              if (msg.role === 'assistant') {
                const bucketId = currentUserMsgId ?? msg.id
                const branches = getBranchTexts(bucketId)
                const currentIdx = selectedBranch[bucketId] ?? branches.length - 1
                const isLast = msg === messages[messages.length - 1]

                const reasoningText = msg.parts
                  .filter((p) => p.type === 'reasoning')
                  .map((p) => (p as { text: string }).text)
                  .join('\\n\\n')

                const isReasoningStreaming =
                  isLast && status === 'streaming' && msg.parts.at(-1)?.type === 'reasoning'

                const sourceParts = msg.parts.filter((p) => p.type === 'source-url')

                const toolParts = msg.parts.filter(isToolUIPart)

                if (branches.length === 0 && !reasoningText && sourceParts.length === 0 && toolParts.length === 0) return null

                return (
                  <Message key={msg.id} from="assistant">
                    {reasoningText && (
                      <Reasoning isStreaming={isReasoningStreaming}>
                        <ReasoningTrigger />
                        <ReasoningContent>{reasoningText}</ReasoningContent>
                      </Reasoning>
                    )}
                    {sourceParts.length > 0 && (
                      <Sources>
                        <SourcesTrigger count={sourceParts.length} />
                        <SourcesContent>
                          {sourceParts.map((p, i) => (
                            <Source key={i} href={(p as any).url} title={(p as any).url} />
                          ))}
                        </SourcesContent>
                      </Sources>
                    )}
                    {toolParts.map((p) => (
                      <MessageContent key={p.toolCallId}>
                        <span className="font-mono text-xs text-muted-foreground">
                          {String(p.type).replace('tool-', '')}
                          {p.state === 'input-available' || p.state === 'approval-requested'
                            ? \`(\${JSON.stringify(p.input)})\` : ''}
                          {p.state === 'output-available' ? \` → \${JSON.stringify(p.output)}\` : ''}
                          {p.state === 'approval-requested' ? ' ⏳ awaiting approval' : ''}
                          {p.state === 'approval-responded' && p.approval.approved ? ' ✓ approved' : ''}
                          {p.state === 'approval-responded' && !p.approval.approved ? ' ✗ rejected' : ''}
                        </span>
                      </MessageContent>
                    ))}

                    {branches.length > 0 && (
                      <MessageBranch
                        defaultBranch={branches.length - 1}
                        onBranchChange={(idx) =>
                          setSelectedBranch((prev) => ({ ...prev, [bucketId]: idx }))
                        }
                      >
                        <MessageBranchContent>
                          {branches.map((text, bi) => (
                            <MessageContent key={bi}>
                              <MessageResponse>{text}</MessageResponse>
                            </MessageContent>
                          ))}
                        </MessageBranchContent>
                        <MessageToolbar>
                          <MessageActions>
                            <MessageAction
                              tooltip="Copy"
                              onClick={() => copyMessage(branches[currentIdx] ?? '')}
                            >
                              <CopyIcon />
                            </MessageAction>
                            <MessageAction
                              tooltip="Regenerate"
                              onClick={() => regenerate()}
                              disabled={status !== 'ready'}
                            >
                              <RotateCcwIcon />
                            </MessageAction>
                          </MessageActions>
                          <MessageBranchSelector>
                            <MessageBranchPrevious />
                            <MessageBranchPage />
                            <MessageBranchNext />
                          </MessageBranchSelector>
                        </MessageToolbar>
                      </MessageBranch>
                    )}
                  </Message>
                )
              }

              return null
            })
          })()}
        </ConversationContent>
        <ConversationScrollButton />
        <ConversationDownload messages={messages} />
      </Conversation>

      <PromptInput onSubmit={handleSubmit} className="border-t">
        <PromptInputBody>
          <PromptInputTextarea placeholder="Type a message..." />
        </PromptInputBody>
        <PromptInputFooter>
          <PromptInputTools>
            {/* TODO: Add tools */}
          </PromptInputTools>
          <PromptInputSubmit status={status} disabled={status !== 'ready'} />
        </PromptInputFooter>
      </PromptInput>
    </>
  )
}

export default function ChatPage() {
  const apiPath = '/api/chat'
  const [conversations, setConversations] = useState<{ id: string; updatedAt: string }[]>([])
  const [conversationId, setConversationId] = useState<string | null>(null)
  const [initialMessages, setInitialMessages] = useState<UIMessage[]>([])

  async function selectConversation(id: string) {
    setConversationId(null)
    try {
      const r = await fetch(\`\${apiPath}/conversations/\${id}\`)
      const data = r.ok ? await r.json() : { messages: [] }
      setInitialMessages((data.messages ?? []) as UIMessage[])
      setConversationId(id)
    } catch {
      setInitialMessages([])
      setConversationId(id)
    }
  }

  async function createConversation() {
    const res = await fetch(\`\${apiPath}/conversations\`, { method: 'POST' })
    const { id } = await res.json() as { id: string }
    setConversationId(id)
    setInitialMessages([])
    setConversations((prev) => [{ id, updatedAt: new Date().toISOString() }, ...prev])
  }

  // On mount: load conversation list; auto-create first conversation if none exist
  useEffect(() => {
    fetch(\`\${apiPath}/conversations\`)
      .then((r) => r.json())
      .then(async (data) => {
        const list = (data as { conversations: { id: string; updatedAt: string }[] }).conversations
        setConversations(list)
        if (list.length > 0) {
          void selectConversation(list[0]!.id)
        } else {
          await createConversation()
        }
      })
      .catch(() => {})
  }, [])

  return (
    <div className="flex h-screen">
      {/* Conversation history sidebar */}
      <div className="w-64 shrink-0 border-r flex flex-col">
        <div className="p-3 border-b">
          <button
            onClick={() => void createConversation()}
            className="w-full text-sm rounded-md border px-3 py-2 hover:bg-accent"
          >
            + New conversation
          </button>
        </div>
        <div className="flex-1 overflow-y-auto">
          {conversations.map((c) => (
            <button
              key={c.id}
              onClick={() => void selectConversation(c.id)}
              className={\`w-full text-left px-3 py-2 text-sm hover:bg-accent truncate \${
                c.id === conversationId ? 'bg-accent font-medium' : ''
              }\`}
            >
              {c.id.slice(0, 8)}…
            </button>
          ))}
        </div>
      </div>

      {/* Chat area */}
      <div className="flex flex-col flex-1 min-w-0">
        {conversationId && (
          <ChatInner
            key={conversationId}
            conversationId={conversationId}
            initialMessages={initialMessages}
          />
        )}
      </div>
    </div>
  )
}
"
`;
